welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:1: error: Missing closing brace `}' assumed here
if (porteBiscuit())
^Balin:4: error: ';' expected but 'else' found.
else {while (!estSurBiscuit())
^